Added breaks to header and added to paragraph

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 	<section>
-		<h1>Git, GitHub & the Command Line</h1>
-		<p>Gotta love becoming a collaborative coder <3</p>
+		<h1>Git <br> GitHub <br>& the Command Line</h1>
+		<p>Gotta love becoming a collaborative coder, learning new skills and stepping into the next chapter of life <3</p>
 		<img src="img/happy-blue-robot.png">
 	</section>
 </body>
